<resources>

    <string name="app_name">Countries</string>
    <string name="population">Population:</string>
    <string name="search_country">Search Country</string>
    <string name="region">Region:</string>
    <string name="capital">Capital:</string>
    <string name="motto">Motto:</string>
    <string name="official_language">Official Language:</string>
    <string name="ethnic_group">Ethnic Group:</string>
    <string name="religion">Religion:</string>
    <string name="government">Government:</string>
    <string name="independence">Independence:</string>
    <string name="area">Area:</string>
    <string name="currency">Currency:</string>
    <string name="gdp">GDP:</string>
    <string name="time_zone">Time Zone:</string>
    <string name="date_format">Date Format:</string>
    <string name="dialing_format">Dialing Format</string>
    <string name="driving_side">Driving Side:</string>
</resources>